--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       color:#fff;
     }
     .card{
-      width:min(720px, 92vw);
+      width:min(760px, 92vw);
       background: rgba(255,255,255,.08);
       border: 1px solid rgba(255,255,255,.15);
       border-radius: 18px;
@@ -21,9 +21,9 @@
       text-align:center;
     }
     h1{ font-size: 22px; margin: 0 0 10px; opacity:.9; }
-    .date{ font-size: 14px; opacity:.75; margin-bottom: 18px; }
+    .date{ font-size: 14px; opacity:.75; margin-bottom: 14px; }
     .quote{ font-size: 26px; line-height:1.25; font-weight: 650; margin: 0; }
-    .small{ margin-top:14px; font-size: 13px; opacity:.7; }
+    .small{ margin-top:14px; font-size: 13px; opacity:.75; }
   </style>
 </head>
 <body>
@@ -31,83 +31,40 @@
     <h1>Motivación del día</h1>
     <div class="date" id="date"></div>
     <p class="quote" id="quote">Cargando...</p>
-    <p class="small">Se actualiza automáticamente cada día.</p>
+    <p class="small" id="meta"></p>
   </div>
 
   <script>
-    // Tu Google Sheet publicado como CSV
     const SHEETS_CSV_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vSIeSLoGa--GmKVbgTW_c_KfKD-qbA-ySD_RQMPVlwrACZmIWENC1X0foqJJaVHmgwVtsMHkWdnhHAd/pub?output=csv";
 
     const quoteEl = document.getElementById("quote");
     const dateEl  = document.getElementById("date");
+    const metaEl  = document.getElementById("meta");
 
-    function formatDate(){
-      const now = new Date();
-      return now.toLocaleDateString("es-ES", {
+    function formatDateHuman(d){
+      return d.toLocaleDateString("es-ES", {
         weekday:"long", year:"numeric", month:"long", day:"numeric"
       });
     }
 
-    // Índice fijo por día (mismo mensaje durante todo el día)
-    function dailyIndex(length){
-      const now = new Date();
-      const yyyy = now.getFullYear();
-      const mm = String(now.getMonth()+1).padStart(2,'0');
-      const dd = String(now.getDate()).padStart(2,'0');
-      const seed = Number(`${yyyy}${mm}${dd}`); // ej: 20260217
-      return seed % length;
+    function formatDateKey(d){
+      const yyyy = d.getFullYear();
+      const mm = String(d.getMonth()+1).padStart(2,'0');
+      const dd = String(d.getDate()).padStart(2,'0');
+      return `${yyyy}-${mm}-${dd}`;
     }
 
-    // Parser de CSV simple para 1 columna "mensaje"
-    function parseCsvMessages(csvText){
-      const lines = csvText
-        .split(/\r?\n/)
-        .map(l => l.trim())
-        .filter(Boolean);
+    // Parser CSV simple para 2 columnas: fecha,mensaje
+    // Soporta mensajes con comas (porque reconstruye todo lo que venga después de la fecha).
+    function parseCsvRows(csvText){
+      const lines = csvText.split(/\r?\n/).map(l => l.trim()).filter(Boolean);
+      if (lines.length <= 1) return [];
 
-      if (lines.length <= 1) return []; // solo encabezado o vacío
+      const rows = [];
+      for (const line of lines.slice(1)) { // saltar header
+        const parts = line.split(",");
+        const fecha = (parts[0] || "").trim().replace(/^"|"$/g, "");
+        let mensaje = parts.slice(1).join(",").trim();
 
-      const dataLines = lines.slice(1); // saltamos encabezado
-
-      return dataLines.map(line => {
-        let msg = line;
-
-        // quita comillas exteriores si vienen
-        if (msg.startsWith('"') && msg.endsWith('"')) {
-          msg = msg.slice(1, -1).replace(/""/g, '"');
-        }
-
-        return msg.trim();
-      }).filter(Boolean);
-    }
-
-    async function loadMessages(){
-      dateEl.textContent = formatDate();
-
-      try {
-        const res = await fetch(SHEETS_CSV_URL, { cache: "no-store" });
-        if (!res.ok) throw new Error("No se pudo cargar el CSV");
-        const csv = await res.text();
-
-        const messages = parseCsvMessages(csv);
-
-        if (!messages.length) {
-          quoteEl.textContent = "Agrega mensajes en tu Google Sheet (columna 'mensaje').";
-          return;
-        }
-
-        const idx = dailyIndex(messages.length);
-        quoteEl.textContent = messages[idx];
-
-      } catch (err) {
-        quoteEl.textContent =
-          "Error cargando mensajes. Revisa que el Sheet esté 'Publicado en la web' como CSV.";
-        console.error(err);
-      }
-    }
-
-    loadMessages();
-  </script>
-</body>
-</html>
+        if (mensaje.startsWith('"') && mensaje.endsWith
