--- a/index.html
+++ b/index.html
@@ -4,35 +4,27 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Motivación del día</title>
-  <style>
-    body{
-      margin:0; min-height:100vh; display:grid; place-items:center;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color:#fff;
-    }
-    .card{
-      width:min(760px, 92vw);
-      background: rgba(255,255,255,.08);
-      border: 1px solid rgba(255,255,255,.15);
-      border-radius: 18px;
-      padding: 28px 22px;
-      box-shadow: 0 20px 60px rgba(0,0,0,.35);
-      text-align:center;
-    }
-    h1{ font-size: 22px; margin: 0 0 10px; opacity:.9; }
-    .date{ font-size: 14px; opacity:.75; margin-bottom: 14px; }
-    .quote{ font-size: 26px; line-height:1.25; font-weight: 650; margin: 0; }
-    .small{ margin-top:14px; font-size: 13px; opacity:.75; }
-  </style>
+
+  <!-- Tailwind vía CDN (rápido para GitHub Pages) -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="card">
-    <h1>Motivación del día</h1>
-    <div class="date" id="date"></div>
-    <p class="quote" id="quote">Cargando...</p>
-    <p class="small" id="meta"></p>
-  </div>
+
+<body class="min-h-screen grid place-items-center bg-gradient-to-br from-slate-950 via-slate-900 to-slate-800 text-white">
+  <main class="w-[min(860px,92vw)] rounded-2xl border border-white/15 bg-white/5 p-7 md:p-10 shadow-2xl">
+    <header class="text-center">
+      <h1 class="text-xl md:text-2xl font-semibold tracking-tight opacity-95">
+        Motivación del día
+      </h1>
+      <p id="date" class="mt-2 text-sm text-white/70"></p>
+    </header>
+
+    <section class="mt-7 text-center">
+      <p id="quote" class="text-2xl md:text-4xl font-bold leading-tight">
+        Cargando...
+      </p>
+      <p id="meta" class="mt-5 text-sm text-white/70"></p>
+    </section>
+  </main>
 
   <script>
     const SHEETS_CSV_URL =
@@ -55,8 +47,7 @@
       return `${yyyy}-${mm}-${dd}`;
     }
 
-    // Parser CSV simple para 2 columnas: fecha,mensaje
-    // Soporta mensajes con comas (porque reconstruye todo lo que venga después de la fecha).
+    // CSV simple: 2 columnas fecha,mensaje (mensaje puede tener comas)
     function parseCsvRows(csvText){
       const lines = csvText.split(/\r?\n/).map(l => l.trim()).filter(Boolean);
       if (lines.length <= 1) return [];
@@ -95,7 +86,7 @@
           return;
         }
 
-        // 1) Buscar frase exacta para hoy
+        // Frase exacta para hoy
         const exact = rows.find(r => r.fecha === todayKey);
         if (exact) {
           quoteEl.textContent = exact.mensaje;
@@ -103,7 +94,7 @@
           return;
         }
 
-        // 2) Si no hay para hoy, buscar próxima futura
+        // Próxima futura
         const future = rows
           .map(r => ({ ...r, dateObj: new Date(r.fecha + "T00:00:00") }))
           .filter(r => !isNaN(r.dateObj) && r.dateObj > today)
@@ -118,8 +109,8 @@
         }
 
       } catch (err) {
-        quoteEl.textContent =
-          "Error cargando frases. Revisa que el Sheet esté 'Publicado en la web' como CSV.";
+        quoteEl.textContent = "Error cargando frases. Revisa que el Sheet esté publicado como CSV.";
+        metaEl.textContent = "";
         console.error(err);
       }
     }
