--- a/index.html
+++ b/index.html
@@ -3,119 +3,108 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Motivación del día</title>
-
-  <!-- Tailwind vía CDN (rápido para GitHub Pages) -->
+  <title>URL como imagen</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="min-h-screen grid place-items-center bg-gradient-to-br from-slate-950 via-slate-900 to-slate-800 text-white">
-  <main class="w-[min(860px,92vw)] rounded-2xl border border-white/15 bg-white/5 p-7 md:p-10 shadow-2xl">
-    <header class="text-center">
-      <h1 class="text-xl md:text-2xl font-semibold tracking-tight opacity-95">
-        Motivación del día
-      </h1>
-      <p id="date" class="mt-2 text-sm text-white/70"></p>
-    </header>
-
-    <section class="mt-7 text-center">
-      <p id="quote" class="text-2xl md:text-4xl font-bold leading-tight">
-        Cargando...
-      </p>
-      <p id="meta" class="mt-5 text-sm text-white/70"></p>
-    </section>
+  <main class="w-[min(900px,92vw)] rounded-2xl border border-white/15 bg-white/5 p-5 md:p-8 shadow-2xl">
+    <div class="rounded-xl border border-white/15 bg-black/20 p-4">
+      <img id="urlImg" class="w-full rounded-lg" alt="URL como imagen" />
+    </div>
   </main>
 
   <script>
-    const SHEETS_CSV_URL =
-      "https://docs.google.com/spreadsheets/d/e/2PACX-1vSIeSLoGa--GmKVbgTW_c_KfKD-qbA-ySD_RQMPVlwrACZmIWENC1X0foqJJaVHmgwVtsMHkWdnhHAd/pub?output=csv";
+    const URL_TO_RENDER = "https://wleimerjose.github.io/mensajes/";
+    const imgEl = document.getElementById("urlImg");
 
-    const quoteEl = document.getElementById("quote");
-    const dateEl  = document.getElementById("date");
-    const metaEl  = document.getElementById("meta");
+    function wrapText(ctx, text, maxWidth) {
+      // Divide por tokens típicos de URL para que haga salto de línea bonito
+      const tokens = text.split(/(\?|&|=|\/|:|\.-|\.|-|_)/g);
+      const lines = [];
+      let line = "";
 
-    function formatDateHuman(d){
-      return d.toLocaleDateString("es-ES", {
-        weekday:"long", year:"numeric", month:"long", day:"numeric"
-      });
-    }
-
-    function formatDateKey(d){
-      const yyyy = d.getFullYear();
-      const mm = String(d.getMonth()+1).padStart(2,'0');
-      const dd = String(d.getDate()).padStart(2,'0');
-      return `${yyyy}-${mm}-${dd}`;
-    }
-
-    // CSV simple: 2 columnas fecha,mensaje (mensaje puede tener comas)
-    function parseCsvRows(csvText){
-      const lines = csvText.split(/\r?\n/).map(l => l.trim()).filter(Boolean);
-      if (lines.length <= 1) return [];
-
-      const rows = [];
-      for (const line of lines.slice(1)) { // saltar header
-        const parts = line.split(",");
-        const fecha = (parts[0] || "").trim().replace(/^"|"$/g, "");
-        let mensaje = parts.slice(1).join(",").trim();
-
-        if (mensaje.startsWith('"') && mensaje.endsWith('"')) {
-          mensaje = mensaje.slice(1, -1).replace(/""/g, '"');
-        }
-
-        if (fecha && mensaje) rows.push({ fecha, mensaje });
-      }
-      return rows;
-    }
-
-    async function loadMessageByDate(){
-      const today = new Date();
-      const todayKey = formatDateKey(today);
-
-      dateEl.textContent = formatDateHuman(today);
-      metaEl.textContent = "";
-
-      try {
-        const res = await fetch(SHEETS_CSV_URL, { cache: "no-store" });
-        if (!res.ok) throw new Error("No se pudo cargar el CSV");
-        const csv = await res.text();
-
-        const rows = parseCsvRows(csv);
-
-        if (!rows.length) {
-          quoteEl.textContent = "Tu Sheet está vacío o no tiene las columnas fecha/mensaje.";
-          return;
-        }
-
-        // Frase exacta para hoy
-        const exact = rows.find(r => r.fecha === todayKey);
-        if (exact) {
-          quoteEl.textContent = exact.mensaje;
-          metaEl.textContent = `Programada para hoy (${todayKey}).`;
-          return;
-        }
-
-        // Próxima futura
-        const future = rows
-          .map(r => ({ ...r, dateObj: new Date(r.fecha + "T00:00:00") }))
-          .filter(r => !isNaN(r.dateObj) && r.dateObj > today)
-          .sort((a,b) => a.dateObj - b.dateObj)[0];
-
-        if (future) {
-          quoteEl.textContent = "Hoy no hay frase programada.";
-          metaEl.textContent = `Próxima: ${future.fecha} → ${future.mensaje}`;
+      for (const t of tokens) {
+        const test = line + t;
+        if (ctx.measureText(test).width <= maxWidth) {
+          line = test;
         } else {
-          quoteEl.textContent = "Hoy no hay frase programada.";
-          metaEl.textContent = "Agrega nuevas filas con fechas futuras (YYYY-MM-DD).";
+          if (line) lines.push(line);
+          line = t;
         }
-
-      } catch (err) {
-        quoteEl.textContent = "Error cargando frases. Revisa que el Sheet esté publicado como CSV.";
-        metaEl.textContent = "";
-        console.error(err);
       }
+      if (line) lines.push(line);
+      return lines;
     }
 
-    loadMessageByDate();
+    function roundRect(ctx, x, y, w, h, r) {
+      ctx.beginPath();
+      ctx.moveTo(x + r, y);
+      ctx.lineTo(x + w - r, y);
+      ctx.quadraticCurveTo(x + w, y, x + w, y + r);
+      ctx.lineTo(x + w, y + h - r);
+      ctx.quadraticCurveTo(x + w, y + h, x + w - r, y + h);
+      ctx.lineTo(x + r, y + h);
+      ctx.quadraticCurveTo(x, y + h, x, y + h - r);
+      ctx.lineTo(x, y + r);
+      ctx.quadraticCurveTo(x, y, x + r, y);
+      ctx.closePath();
+    }
+
+    function renderUrlAsImage(url) {
+      const W = 1400;
+      const H = 420;
+      const pad = 64;
+
+      const canvas = document.createElement("canvas");
+      canvas.width = W;
+      canvas.height = H;
+      const ctx = canvas.getContext("2d");
+
+      // Fondo degradado
+      const grad = ctx.createLinearGradient(0, 0, W, H);
+      grad.addColorStop(0, "#020617"); // slate-950
+      grad.addColorStop(1, "#111827"); // slate-900
+      ctx.fillStyle = grad;
+      ctx.fillRect(0, 0, W, H);
+
+      // Tarjeta
+      ctx.fillStyle = "rgba(255,255,255,0.06)";
+      ctx.strokeStyle = "rgba(255,255,255,0.14)";
+      ctx.lineWidth = 2;
+      roundRect(ctx, 40, 40, W - 80, H - 80, 28);
+      ctx.fill();
+      ctx.stroke();
+
+      // Título
+      ctx.fillStyle = "rgba(255,255,255,0.9)";
+      ctx.font = "700 40px system-ui, -apple-system, Segoe UI, Roboto, Arial";
+      ctx.fillText("Enlace", 40 + pad, 40 + pad);
+
+      // URL (monospace)
+      ctx.fillStyle = "rgba(255,255,255,0.95)";
+      ctx.font = "600 40px ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace";
+
+      const maxWidth = (W - 80) - pad * 2;
+      const lines = wrapText(ctx, url, maxWidth);
+
+      let y = 40 + pad + 92;
+      const lineHeight = 56;
+
+      for (let i = 0; i < lines.length; i++) {
+        ctx.fillText(lines[i], 40 + pad, y);
+        y += lineHeight;
+      }
+
+      // Footer
+      ctx.fillStyle = "rgba(255,255,255,0.65)";
+      ctx.font = "500 26px system-ui, -apple-system, Segoe UI, Roboto, Arial";
+      ctx.fillText("Escanéalo o escríbelo tal cual", 40 + pad, H - 70);
+
+      return canvas.toDataURL("image/png");
+    }
+
+    imgEl.src = renderUrlAsImage(URL_TO_RENDER);
   </script>
 </body>
 </html>
