--- a/index.html
+++ b/index.html
@@ -8,103 +8,6 @@
 </head>
 
 <body class="min-h-screen grid place-items-center bg-gradient-to-br from-slate-950 via-slate-900 to-slate-800 text-white">
-  <main class="w-[min(900px,92vw)] rounded-2xl border border-white/15 bg-white/5 p-5 md:p-8 shadow-2xl">
-    <div class="rounded-xl border border-white/15 bg-black/20 p-4">
-      <img id="urlImg" class="w-full rounded-lg" alt="URL como imagen" />
-    </div>
-  </main>
-
-  <script>
-    const URL_TO_RENDER = "https://wleimerjose.github.io/mensajes/";
-    const imgEl = document.getElementById("urlImg");
-
-    function wrapText(ctx, text, maxWidth) {
-      // Divide por tokens típicos de URL para que haga salto de línea bonito
-      const tokens = text.split(/(\?|&|=|\/|:|\.-|\.|-|_)/g);
-      const lines = [];
-      let line = "";
-
-      for (const t of tokens) {
-        const test = line + t;
-        if (ctx.measureText(test).width <= maxWidth) {
-          line = test;
-        } else {
-          if (line) lines.push(line);
-          line = t;
-        }
-      }
-      if (line) lines.push(line);
-      return lines;
-    }
-
-    function roundRect(ctx, x, y, w, h, r) {
-      ctx.beginPath();
-      ctx.moveTo(x + r, y);
-      ctx.lineTo(x + w - r, y);
-      ctx.quadraticCurveTo(x + w, y, x + w, y + r);
-      ctx.lineTo(x + w, y + h - r);
-      ctx.quadraticCurveTo(x + w, y + h, x + w - r, y + h);
-      ctx.lineTo(x + r, y + h);
-      ctx.quadraticCurveTo(x, y + h, x, y + h - r);
-      ctx.lineTo(x, y + r);
-      ctx.quadraticCurveTo(x, y, x + r, y);
-      ctx.closePath();
-    }
-
-    function renderUrlAsImage(url) {
-      const W = 1400;
-      const H = 420;
-      const pad = 64;
-
-      const canvas = document.createElement("canvas");
-      canvas.width = W;
-      canvas.height = H;
-      const ctx = canvas.getContext("2d");
-
-      // Fondo degradado
-      const grad = ctx.createLinearGradient(0, 0, W, H);
-      grad.addColorStop(0, "#020617"); // slate-950
-      grad.addColorStop(1, "#111827"); // slate-900
-      ctx.fillStyle = grad;
-      ctx.fillRect(0, 0, W, H);
-
-      // Tarjeta
-      ctx.fillStyle = "rgba(255,255,255,0.06)";
-      ctx.strokeStyle = "rgba(255,255,255,0.14)";
-      ctx.lineWidth = 2;
-      roundRect(ctx, 40, 40, W - 80, H - 80, 28);
-      ctx.fill();
-      ctx.stroke();
-
-      // Título
-      ctx.fillStyle = "rgba(255,255,255,0.9)";
-      ctx.font = "700 40px system-ui, -apple-system, Segoe UI, Roboto, Arial";
-      ctx.fillText("Enlace", 40 + pad, 40 + pad);
-
-      // URL (monospace)
-      ctx.fillStyle = "rgba(255,255,255,0.95)";
-      ctx.font = "600 40px ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace";
-
-      const maxWidth = (W - 80) - pad * 2;
-      const lines = wrapText(ctx, url, maxWidth);
-
-      let y = 40 + pad + 92;
-      const lineHeight = 56;
-
-      for (let i = 0; i < lines.length; i++) {
-        ctx.fillText(lines[i], 40 + pad, y);
-        y += lineHeight;
-      }
-
-      // Footer
-      ctx.fillStyle = "rgba(255,255,255,0.65)";
-      ctx.font = "500 26px system-ui, -apple-system, Segoe UI, Roboto, Arial";
-      ctx.fillText("Escanéalo o escríbelo tal cual", 40 + pad, H - 70);
-
-      return canvas.toDataURL("image/png");
-    }
-
-    imgEl.src = renderUrlAsImage(URL_TO_RENDER);
-  </script>
+ Hola! 
 </body>
 </html>
