--- a/imagen.html
+++ b/imagen.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <iframe src="https://wleimerjose.github.io/mensajes/" width="100%" height="600" style="border: 0;"
-        loading="lazy"></iframe>
+    <img src="https://image.thum.io/get/https://wleimerjose.github.io/mensajes/" alt="Captura del sitio"
+        style="max-width:100%; height:auto;" />
+
 </body>
 
 </html>
