--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>URL como imagen</title>
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="min-h-screen grid place-items-center bg-gradient-to-br from-slate-950 via-slate-900 to-slate-800 text-white">
+<body style="background-color:red">
  Hola! 
 </body>
 </html>
