--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!doctype html>
-<html lang="es">
+<html lang="es" class="loading">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Motivación del día</title>
 
-  <!-- Tailwind vía CDN (rápido para GitHub Pages) -->
+  <!-- Tailwind vía CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <style>
+    /* Oculta TODO (incluye fondo) hasta que el texto esté listo */
+    html.loading, html.loading body { display: none; }
+
+    /* Fijar tamaño exacto del “canvas” */
+    .page {
+      width: 1320px;
+      height: 2868px;
+    }
+  </style>
 </head>
 
 <body class="min-h-screen grid place-items-center bg-gradient-to-br from-slate-950 via-slate-900 to-slate-800 text-white">
-  <main class="w-[min(860px,92vw)] rounded-2xl border border-white/15 bg-white/5 p-7 md:p-10 shadow-2xl">
-    <header class="text-center">
-      <h1 class="text-xl md:text-2xl font-semibold tracking-tight opacity-95">
-        Motivación del día
-      </h1>
-      <p id="date" class="mt-2 text-sm text-white/70"></p>
-    </header>
+  <!-- Contenedor con medidas exactas -->
+  <div class="page grid place-items-center">
+    <main class="w-[min(860px,92vw)] rounded-2xl border border-white/15 bg-white/5 p-7 md:p-10 shadow-2xl">
+      <header class="text-center">
+        <h1 class="text-xl md:text-2xl font-semibold tracking-tight opacity-95">
+          Motivación del día
+        </h1>
+        <p id="date" class="mt-2 text-sm text-white/70"></p>
+      </header>
 
-    <section class="mt-7 text-center">
-      <p id="quote" class="text-2xl md:text-4xl font-bold leading-tight">
-        Cargando...
-      </p>
-      <p id="meta" class="mt-5 text-sm text-white/70"></p>
-    </section>
-  </main>
+      <section class="mt-7 text-center">
+        <p id="quote" class="text-2xl md:text-4xl font-bold leading-tight"></p>
+        <p id="meta" class="mt-5 text-sm text-white/70"></p>
+      </section>
+    </main>
+  </div>
 
   <script>
     const SHEETS_CSV_URL =
@@ -67,6 +79,10 @@
       return rows;
     }
 
+    function showAll(){
+      document.documentElement.classList.remove("loading");
+    }
+
     async function loadMessageByDate(){
       const today = new Date();
       const todayKey = formatDateKey(today);
@@ -80,38 +96,28 @@
         const csv = await res.text();
 
         const rows = parseCsvRows(csv);
-
         if (!rows.length) {
           quoteEl.textContent = "Tu Sheet está vacío o no tiene las columnas fecha/mensaje.";
+          showAll();
           return;
         }
 
-        // Frase exacta para hoy
         const exact = rows.find(r => r.fecha === todayKey);
         if (exact) {
           quoteEl.textContent = exact.mensaje;
           metaEl.textContent = `Programada para hoy (${todayKey}).`;
+          showAll();
           return;
         }
 
-        // Próxima futura
-        const future = rows
-          .map(r => ({ ...r, dateObj: new Date(r.fecha + "T00:00:00") }))
-          .filter(r => !isNaN(r.dateObj) && r.dateObj > today)
-          .sort((a,b) => a.dateObj - b.dateObj)[0];
-
-        if (future) {
-          quoteEl.textContent = "Hoy no hay frase programada.";
-          metaEl.textContent = `Próxima: ${future.fecha} → ${future.mensaje}`;
-        } else {
-          quoteEl.textContent = "Hoy no hay frase programada.";
-          metaEl.textContent = "Agrega nuevas filas con fechas futuras (YYYY-MM-DD).";
-        }
+        quoteEl.textContent = "Hoy no hay frase programada.";
+        showAll();
 
       } catch (err) {
         quoteEl.textContent = "Error cargando frases. Revisa que el Sheet esté publicado como CSV.";
         metaEl.textContent = "";
         console.error(err);
+        showAll();
       }
     }
 
