--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main class="w-[min(860px,92vw)] rounded-2xl border border-white/15 bg-white/5 p-7 md:p-10 shadow-2xl">
             <header class="text-center">
                 <h1 class="text-xl md:text-2xl font-semibold tracking-tight opacity-95">
-                    Chao
+                    Adios
                 </h1>
 
             </header>
